[package]
name = "vrc_oscquery"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A cross-platform rust implementation of OSCQuery for VRChat that *probably* works"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.18", features = ["full"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = "0.1"
mdns-sd = "0.17.0"
thiserror = "2.0.17"
log = "0.4.28"
